--- a/.github/workflows/simulink_pipeline.yml
+++ b/.github/workflows/simulink_pipeline.yml
@@ -27,7 +27,7 @@ jobs:
   
        - name: Copy ir_dag and pipeline
          run: |
-           cp scm/<path/to/ir_dag.json> scm/ir_dag.json
+           cp scm/.github/workflows/ir_dag.json scm/ir_dag.json
   
        - name: Upload ir_dag
          uses: actions/upload-artifact@v4
