--- a/.github/workflows/simulink_pipeline.yml
+++ b/.github/workflows/simulink_pipeline.yml
@@ -35,268 +35,63 @@ jobs:
            name: ir_dag
            path: |
              scm/ir_dag.json
-  
-   padv_builtin_task_GenerateRequirementsReport_HighLevelReqs:
+  padv_builtin_task_GenerateRequirementsReport:
     needs: [ir_dag]
     uses: ./.github/workflows/generic-job.yml
     with:
-      job-name: padv_builtin_task_GenerateRequirementsReport_HighLevelReqs 
+      job-name: padv_builtin_task_GenerateRequirementsReport 
   
-   padv_builtin_task_GenerateRequirementsReport_SystemReqs:
-    needs: [padv_builtin_task_GenerateRequirementsReport_HighLevelReqs]
+  padv_builtin_task_GenerateSimulinkWebView:
+    needs: [padv_builtin_task_GenerateRequirementsReport]
     uses: ./.github/workflows/generic-job.yml
     with:
-      job-name: padv_builtin_task_GenerateRequirementsReport_SystemReqs 
+      job-name: padv_builtin_task_GenerateSimulinkWebView 
   
-   padv_builtin_task_GenerateSimulinkWebView_AHRS_Voter:
-    needs: [padv_builtin_task_GenerateRequirementsReport_SystemReqs]
+  padv_builtin_task_RunModelStandards:
+    needs: [padv_builtin_task_GenerateSimulinkWebView]
     uses: ./.github/workflows/generic-job.yml
     with:
-      job-name: padv_builtin_task_GenerateSimulinkWebView_AHRS_Voter 
+      job-name: padv_builtin_task_RunModelStandards 
   
-   padv_builtin_task_RunModelStandards_AHRS_Voter:
-    needs: [padv_builtin_task_GenerateSimulinkWebView_AHRS_Voter]
+  FindAcrossModelClones:
+    needs: [padv_builtin_task_RunModelStandards]
     uses: ./.github/workflows/generic-job.yml
     with:
-      job-name: padv_builtin_task_RunModelStandards_AHRS_Voter 
+      job-name: FindAcrossModelClones 
   
-   FindAcrossModelClones_AHRS_Voter:
-    needs: [padv_builtin_task_RunModelStandards_AHRS_Voter]
+  FindLibraryClones:
+    needs: [FindAcrossModelClones]
     uses: ./.github/workflows/generic-job.yml
     with:
-      job-name: FindAcrossModelClones_AHRS_Voter 
+      job-name: FindLibraryClones 
   
-   FindLibraryClones_AHRS_Voter:
-    needs: [FindAcrossModelClones_AHRS_Voter]
+  padv_builtin_task_GenerateModelComparison:
+    needs: [FindLibraryClones]
     uses: ./.github/workflows/generic-job.yml
     with:
-      job-name: FindLibraryClones_AHRS_Voter 
+      job-name: padv_builtin_task_GenerateModelComparison 
   
-   padv_builtin_task_GenerateModelComparison_AHRS_Voter:
-    needs: [FindLibraryClones_AHRS_Voter]
+  padv_builtin_task_GenerateSDDReport:
+    needs: [padv_builtin_task_GenerateModelComparison]
     uses: ./.github/workflows/generic-job.yml
     with:
-      job-name: padv_builtin_task_GenerateModelComparison_AHRS_Voter 
+      job-name: padv_builtin_task_GenerateSDDReport 
   
-   padv_builtin_task_GenerateSDDReport_AHRS_Voter:
-    needs: [padv_builtin_task_GenerateModelComparison_AHRS_Voter]
+  padv_builtin_task_RunTestsPerTestCase:
+    needs: [padv_builtin_task_GenerateSDDReport]
     uses: ./.github/workflows/generic-job.yml
     with:
-      job-name: padv_builtin_task_GenerateSDDReport_AHRS_Voter 
+      job-name: padv_builtin_task_RunTestsPerTestCase 
   
-   padv_builtin_task_RunTestsPerTestCase_AHRS_Voter_HLR_11:
-    needs: [padv_builtin_task_GenerateSDDReport_AHRS_Voter]
+  padv_builtin_task_MergeTestResults:
+    needs: [padv_builtin_task_RunTestsPerTestCase]
     uses: ./.github/workflows/generic-job.yml
     with:
-      job-name: padv_builtin_task_RunTestsPerTestCase_AHRS_Voter_HLR_11 
+      job-name: padv_builtin_task_MergeTestResults 
   
-   padv_builtin_task_RunTestsPerTestCase_AHRS_Voter_HLR_12:
-    needs: [padv_builtin_task_RunTestsPerTestCase_AHRS_Voter_HLR_11]
+  ModelTestingMetrics:
+    needs: [padv_builtin_task_MergeTestResults]
     uses: ./.github/workflows/generic-job.yml
     with:
-      job-name: padv_builtin_task_RunTestsPerTestCase_AHRS_Voter_HLR_12 
-  
-   padv_builtin_task_RunTestsPerTestCase_AHRS_Voter_HLR_13:
-    needs: [padv_builtin_task_RunTestsPerTestCase_AHRS_Voter_HLR_12]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_RunTestsPerTestCase_AHRS_Voter_HLR_13 
-  
-   padv_builtin_task_MergeTestResults_AHRS_Voter:
-    needs: [padv_builtin_task_RunTestsPerTestCase_AHRS_Voter_HLR_13]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_MergeTestResults_AHRS_Voter 
-  
-   ModelTestingMetrics_AHRS_Voter:
-    needs: [padv_builtin_task_MergeTestResults_AHRS_Voter]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: ModelTestingMetrics_AHRS_Voter 
-  
-   padv_builtin_task_GenerateSimulinkWebView_Actuator_Control:
-    needs: [ModelTestingMetrics_AHRS_Voter]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_GenerateSimulinkWebView_Actuator_Control 
-  
-   padv_builtin_task_RunModelStandards_Actuator_Control:
-    needs: [padv_builtin_task_GenerateSimulinkWebView_Actuator_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_RunModelStandards_Actuator_Control 
-  
-   FindAcrossModelClones_Actuator_Control:
-    needs: [padv_builtin_task_RunModelStandards_Actuator_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: FindAcrossModelClones_Actuator_Control 
-  
-   FindLibraryClones_Actuator_Control:
-    needs: [FindAcrossModelClones_Actuator_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: FindLibraryClones_Actuator_Control 
-  
-   padv_builtin_task_GenerateModelComparison_Actuator_Control:
-    needs: [FindLibraryClones_Actuator_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_GenerateModelComparison_Actuator_Control 
-  
-   padv_builtin_task_GenerateSDDReport_Actuator_Control:
-    needs: [padv_builtin_task_GenerateModelComparison_Actuator_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_GenerateSDDReport_Actuator_Control 
-  
-   padv_builtin_task_GenerateSimulinkWebView_Flight_Control:
-    needs: [padv_builtin_task_GenerateSDDReport_Actuator_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_GenerateSimulinkWebView_Flight_Control 
-  
-   padv_builtin_task_RunModelStandards_Flight_Control:
-    needs: [padv_builtin_task_GenerateSimulinkWebView_Flight_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_RunModelStandards_Flight_Control 
-  
-   FindAcrossModelClones_Flight_Control:
-    needs: [padv_builtin_task_RunModelStandards_Flight_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: FindAcrossModelClones_Flight_Control 
-  
-   FindLibraryClones_Flight_Control:
-    needs: [FindAcrossModelClones_Flight_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: FindLibraryClones_Flight_Control 
-  
-   padv_builtin_task_GenerateModelComparison_Flight_Control:
-    needs: [FindLibraryClones_Flight_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_GenerateModelComparison_Flight_Control 
-  
-   padv_builtin_task_GenerateSDDReport_Flight_Control:
-    needs: [padv_builtin_task_GenerateModelComparison_Flight_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_GenerateSDDReport_Flight_Control 
-  
-   padv_builtin_task_GenerateSimulinkWebView_InnerLoop_Control:
-    needs: [padv_builtin_task_GenerateSDDReport_Flight_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_GenerateSimulinkWebView_InnerLoop_Control 
-  
-   padv_builtin_task_RunModelStandards_InnerLoop_Control:
-    needs: [padv_builtin_task_GenerateSimulinkWebView_InnerLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_RunModelStandards_InnerLoop_Control 
-  
-   FindAcrossModelClones_InnerLoop_Control:
-    needs: [padv_builtin_task_RunModelStandards_InnerLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: FindAcrossModelClones_InnerLoop_Control 
-  
-   FindLibraryClones_InnerLoop_Control:
-    needs: [FindAcrossModelClones_InnerLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: FindLibraryClones_InnerLoop_Control 
-  
-   padv_builtin_task_GenerateModelComparison_InnerLoop_Control:
-    needs: [FindLibraryClones_InnerLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_GenerateModelComparison_InnerLoop_Control 
-  
-   padv_builtin_task_GenerateSDDReport_InnerLoop_Control:
-    needs: [padv_builtin_task_GenerateModelComparison_InnerLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_GenerateSDDReport_InnerLoop_Control 
-  
-   padv_builtin_task_GenerateSimulinkWebView_OuterLoop_Control:
-    needs: [padv_builtin_task_GenerateSDDReport_InnerLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_GenerateSimulinkWebView_OuterLoop_Control 
-  
-   padv_builtin_task_RunModelStandards_OuterLoop_Control:
-    needs: [padv_builtin_task_GenerateSimulinkWebView_OuterLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_RunModelStandards_OuterLoop_Control 
-  
-   FindAcrossModelClones_OuterLoop_Control:
-    needs: [padv_builtin_task_RunModelStandards_OuterLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: FindAcrossModelClones_OuterLoop_Control 
-  
-   FindLibraryClones_OuterLoop_Control:
-    needs: [FindAcrossModelClones_OuterLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: FindLibraryClones_OuterLoop_Control 
-  
-   padv_builtin_task_GenerateModelComparison_OuterLoop_Control:
-    needs: [FindLibraryClones_OuterLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_GenerateModelComparison_OuterLoop_Control 
-  
-   padv_builtin_task_GenerateSDDReport_OuterLoop_Control:
-    needs: [padv_builtin_task_GenerateModelComparison_OuterLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_GenerateSDDReport_OuterLoop_Control 
-  
-   padv_builtin_task_RunTestsPerTestCase_OuterLoop_Control_HLR_6:
-    needs: [padv_builtin_task_GenerateSDDReport_OuterLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_RunTestsPerTestCase_OuterLoop_Control_HLR_6 
-  
-   padv_builtin_task_RunTestsPerTestCase_OuterLoop_Control_HLR_7:
-    needs: [padv_builtin_task_RunTestsPerTestCase_OuterLoop_Control_HLR_6]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_RunTestsPerTestCase_OuterLoop_Control_HLR_7 
-  
-   padv_builtin_task_RunTestsPerTestCase_OuterLoop_Control_HLR_8:
-    needs: [padv_builtin_task_RunTestsPerTestCase_OuterLoop_Control_HLR_7]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_RunTestsPerTestCase_OuterLoop_Control_HLR_8 
-  
-   padv_builtin_task_MergeTestResults_OuterLoop_Control:
-    needs: [padv_builtin_task_RunTestsPerTestCase_OuterLoop_Control_HLR_8]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: padv_builtin_task_MergeTestResults_OuterLoop_Control 
-  
-   ModelTestingMetrics_OuterLoop_Control:
-    needs: [padv_builtin_task_MergeTestResults_OuterLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: ModelTestingMetrics_OuterLoop_Control 
-  
-   ModelTestingMetrics_Actuator_Control:
-    needs: [ModelTestingMetrics_OuterLoop_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: ModelTestingMetrics_Actuator_Control 
-  
-   ModelTestingMetrics_InnerLoop_Control:
-    needs: [ModelTestingMetrics_Actuator_Control]
-    uses: ./.github/workflows/generic-job.yml
-    with:
-      job-name: ModelTestingMetrics_InnerLoop_Control 
+      job-name: ModelTestingMetrics 
   
